Almost compilable